# fastapi-postgresql-crud-master

./: .gitignore  README.md  pyproject.toml
app/: config.py
